--- a/MinistryKidsShoppingDay.html
+++ b/MinistryKidsShoppingDay.html
@@ -1,45 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
     <!-- Required Scripts -->
-    <!-- Importing JavaScript files for navbar functionality -->
     <script src="navbar.js" defer></script>
-    <!-- Importing Bootstrap library for enhanced styling and functionality -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- End Scripts -->
-
     <!-- Required Stylesheets -->
-    <!-- Importing Bootstrap CSS for styling -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
-    <!-- Custom CSS for additional styling -->
     <link rel="stylesheet" href="./index.css" />
     <!-- End Stylesheets -->
-
-    <!-- Meta tags -->
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Van Meter United Methodist Church</title>
   </head>
-
-  <!-- Body starts here -->
   <body>
-    <!-- Banner section -->
+    <!-- Banner -->
     <div class="mt-sm-0 mt-md-3 mt-lg-3 container mx-auto p-0">
       <img class="w-100" src="./images/websitebanner.jpg" />
     </div>
     <!-- End Banner -->
-
-    <!-- Navbar section -->
+    <!-- Navbar -->
     <div class="container mx-auto p-0">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow">
-        <!-- Navbar toggler for smaller screens -->
         <button
           class="navbar-toggler"
           type="button"
@@ -52,18 +37,14 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <!-- Navbar content -->
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-          <!-- Navbar links -->
           <ul class="navbar-nav mx-auto mt-2 mt-lg-0">
-            <!-- Navigation links -->
             <li class="nav-item">
               <a class="nav-link" href="/index.html"> Home </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/kidscare.html"> Kids Care </a>
             </li>
-            <!-- Dropdown menu for 'Our Church' section -->
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
@@ -75,7 +56,6 @@
               >
                 Our Church
               </a>
-              <!-- Dropdown menu items -->
               <div
                 class="dropdown-menu dropdown-menu-dark bg-dark shadow"
                 aria-labelledby="dropdown08"
@@ -98,13 +78,14 @@
                 </a>
               </div>
             </li>
-            <!-- Additional navigation links -->
+
             <li class="nav-item">
               <a class="nav-link" href="/worship.html"> Worship </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/ministries.html"> Ministries </a>
             </li>
+
             <li class="nav-item">
               <a class="nav-link" href="/photos.html"> Photos </a>
             </li>
@@ -114,7 +95,6 @@
             <li class="nav-item">
               <a class="nav-link" href="/publications.html"> Publications </a>
             </li>
-            <!-- Dropdown menu for 'Contact Us' section -->
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
@@ -126,7 +106,6 @@
               >
                 Contact Us
               </a>
-              <!-- Dropdown menu items -->
               <div
                 class="dropdown-menu dropdown-menu-dark bg-dark shadow"
                 aria-labelledby="dropdown08"
@@ -149,121 +128,35 @@
     </div>
     <!-- End Navbar -->
 
-    <div class="container mx-auto px-3 bg">
-      <!-- Content sections -->
-      <!-- Row with padding top 5 and centered content -->
+    <div class="px-3 mx-auto container bg">
       <div class="row pt-5 mx-auto text-center">
-        <h1>A Mission Moment</h1>
+        <h1>Kids Shopping Day</h1>
       </div>
-      <div class="row pt-3 mx-auto">
+      <div class="row mx-auto pt-3">
         <hr />
-      </div>
-      <div class="row pt-3 mx-auto text-center">
-        <h3>Food Pantry Needs Donations</h3>
-      </div>
-      <div class="row pt-3 mx-auto">
         <p>
-          The Good Samaritan Food Pantry in Adel serves the school districts of
-          Van Meter and ADM (Adel, De Soto, and Minburn). The pantry regularly
-          distributes over 4000 cans each month, and the need continues to grow.
+          On a Saturday morning early in December, we host Kids Shopping Day at
+          Van Meter UMC. Kids can shop for Christmas presents for their family
+          members at garage sale prices. Parents stay hidden so they don't ruin
+          the surprise, and there are helpers to help the kids shop and wrap
+          presents. It is a lot of fun for everyone, and the proceeds go towards
+          providing food support for local families in need.
         </p>
       </div>
-      <div class="row pt-3 mx-auto">
+      <div class="row mx-auto pt-3">
         <p>
-          Cash donations are wonderful because the money can be used for
-          purchases at the Food Bank of Iowa at 17¢ a pound. Donations of goods
-          are, of course, also welcome.
+          We have the joy of working with the Van Meter Baptist Church on this
+          project.
         </p>
       </div>
-      <div class="row pt-3 mx-auto">
-        <p>The pantry is asking for:</p>
-      </div>
-      <div class="row pt-4 mx-auto">
-        <div class="col-lg-7">
-          <div class="row mx-auto">
-            <ul class="list-group flex-wrap text-center">
-              <div class="row">
-                <li class="list-group-item col-lg-12 bg-dark text-white">
-                  <h3>Foods most needed</h3>
-                </li>
-                <li class="list-group-item col-lg-6">Peanut butter</li>
-                <li class="list-group-item col-lg-6">Jelly</li>
-                <li class="list-group-item col-lg-6">Bottled juice</li>
-                <li class="list-group-item col-lg-6">Cereal (hot & cold)</li>
-                <li class="list-group-item col-lg-6">Hamburger Helper</li>
-                <li class="list-group-item col-lg-6">Fruits</li>
-                <li class="list-group-item col-lg-6">Flour</li>
-                <li class="list-group-item col-lg-6">Sugar</li>
-                <li class="list-group-item col-lg-6">Crackers</li>
-                <li class="list-group-item col-lg-6">
-                  Canned meats (tuna & chicken)
-                </li>
-                <li class="list-group-item col-lg-6">Spaghetti sauce</li>
-                <li class="list-group-item col-lg-6">Pasta</li>
-              </div>
-            </ul>
-          </div>
-          <div class="row pt-3">
-            <p>
-              (Remember to check your expiration dates on canned goods, as the
-              pantry cannot use expired foods.)
-            </p>
-          </div>
-        </div>
-        <div class="col-lg-5 text-center pt-3 pt-lg-0 align-self-center">
-          <img
-            class="w-75"
-            src="./images/GoodSamaritanFoodPantryLogo.jpg"
-            alt="Good Samaritan Food Pantry -- serving our neighbors since 1982"
-          />
-        </div>
-      </div>
-      <div class="row pt-4 mx-auto">
-        <div class="col-lg-7">
-          <ul class="list-group flex-wrap text-center">
-            <div class="row">
-              <li class="list-group-item col-lg-12 bg-dark text-white">
-                <h3>Personal Care Items Needed</h3>
-              </li>
-              <li class="list-group-item col-lg-6">Toothbrushes</li>
-              <li class="list-group-item col-lg-6">Bar soap</li>
-              <li class="list-group-item col-lg-6">Toothpaste</li>
-              <li class="list-group-item col-lg-6">Toilet paper</li>
-              <li class="list-group-item col-lg-6">Deodorant</li>
-              <li class="list-group-item col-lg-6">Laundry detergent</li>
-              <li class="list-group-item col-lg-6">Shampoo</li>
-              <li class="list-group-item col-lg-6">Conditioner</li>
-              <li class="list-group-item col-lg-6">Facial tissue</li>
-              <li class="list-group-item col-lg-6">Dish detergent</li>
-            </div>
-          </ul>
-        </div>
-        <div class="col-lg-5 text-center pt-3 pt-lg-0 align-self-center">
-          <img
-            class="w-50"
-            src="./images/food.jpg"
-            alt="food for the food pantry"
-          />
-        </div>
-      </div>
-      <div class="row pt-3 mx-auto">
-        <p>
-          For more information on the Good Samaritan Food Pantry,
-          <a href="http://www.adelfoodpantry.com">visit their website</a>
-        </p>
-      </div>
-      <div class="row pt-3 mx-auto">
-        <p>
-          Contact Suzy Lowman or Rev. Beth if you would like more information
-          about our church's involvement, or if would like to help out.
-        </p>
-      </div>
-      <div class="row pt-3 mx-auto text-center">
-        <h3>
-          <a href="/missionmomentTeams.html">Learn about Mission Teams</a>
-        </h3>
+      <div class="row mx-auto text-center pt-3">
+        <img
+          src="./images/MinistryKidsShoppingDay2.jpg"
+          alt="Kids' Shopping Day.  Elves help kids shop.  Gifts are wrapped so they stay a surprise. Parents wait outside.  Van Meter Methodists and Baptists partner on this project."
+        />
       </div>
     </div>
+
     <!-- Start Footer -->
     <footer class="pt-5 mb-sm-0 mb-md-3 mb-lg-3 container mx-auto p-0 bg">
       <!-- Footer row -->
