--- a/scholarships.html
+++ b/scholarships.html
@@ -14,10 +14,6 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
     <!-- Custom CSS for additional styling -->
     <link rel="stylesheet" href="./index.css" />
     <!-- End Stylesheets -->
@@ -150,118 +146,59 @@
     <!-- End Navbar -->
 
     <div class="container mx-auto px-3 bg">
-      <!-- Content sections -->
-      <!-- Row with padding top 5 and centered content -->
-      <div class="row pt-5 mx-auto text-center">
-        <h1>A Mission Moment</h1>
-      </div>
+      <div class="row pt-5 mx-auto text-center"><h1>UMC Scholarships</h1></div>
+      <div class="row pt-3 mx-auto"><hr /></div>
+      <div class="row pt-3 mx-auto text-center"><h3>Scholarships</h3></div>
       <div class="row pt-3 mx-auto">
-        <hr />
-      </div>
-      <div class="row pt-3 mx-auto text-center">
-        <h3>Food Pantry Needs Donations</h3>
-      </div>
-      <div class="row pt-3 mx-auto">
-        <p>
-          The Good Samaritan Food Pantry in Adel serves the school districts of
-          Van Meter and ADM (Adel, De Soto, and Minburn). The pantry regularly
-          distributes over 4000 cans each month, and the need continues to grow.
-        </p>
-      </div>
-      <div class="row pt-3 mx-auto">
-        <p>
-          Cash donations are wonderful because the money can be used for
-          purchases at the Food Bank of Iowa at 17¢ a pound. Donations of goods
-          are, of course, also welcome.
-        </p>
-      </div>
-      <div class="row pt-3 mx-auto">
-        <p>The pantry is asking for:</p>
-      </div>
-      <div class="row pt-4 mx-auto">
-        <div class="col-lg-7">
-          <div class="row mx-auto">
-            <ul class="list-group flex-wrap text-center">
-              <div class="row">
-                <li class="list-group-item col-lg-12 bg-dark text-white">
-                  <h3>Foods most needed</h3>
-                </li>
-                <li class="list-group-item col-lg-6">Peanut butter</li>
-                <li class="list-group-item col-lg-6">Jelly</li>
-                <li class="list-group-item col-lg-6">Bottled juice</li>
-                <li class="list-group-item col-lg-6">Cereal (hot & cold)</li>
-                <li class="list-group-item col-lg-6">Hamburger Helper</li>
-                <li class="list-group-item col-lg-6">Fruits</li>
-                <li class="list-group-item col-lg-6">Flour</li>
-                <li class="list-group-item col-lg-6">Sugar</li>
-                <li class="list-group-item col-lg-6">Crackers</li>
-                <li class="list-group-item col-lg-6">
-                  Canned meats (tuna & chicken)
-                </li>
-                <li class="list-group-item col-lg-6">Spaghetti sauce</li>
-                <li class="list-group-item col-lg-6">Pasta</li>
-              </div>
-            </ul>
-          </div>
-          <div class="row pt-3">
+        <div class="col-lg-6">
+          <div class="row">
             <p>
-              (Remember to check your expiration dates on canned goods, as the
-              pantry cannot use expired foods.)
+              Graduating high school seniors and current college and
+              trade-school students who are active in the Van Meter UM church
+              are encouraged to apply for college or vocational scholarships. We
+              consider an active participant as one who regularly attends Sunday
+              School and church services, or who participates in church group
+              activities.
+            </p>
+          </div>
+          <div class="row">
+            <p>
+              Scholarships are available from our church, from the Iowa United
+              Methodist Foundation, and at the national level from GBHEM, the
+              General Board of Higher Education and Ministry.
+            </p>
+          </div>
+          <div class="row">
+            <p>
+              See Stacy Peterson or contact the church office for an application
+              for our church scholarship. Stacy can answer your scholarship
+              questions.
+            </p>
+          </div>
+          <div class="row">
+            <p>
+              For Iowa United Methodist Foundation scholarships, please
+              <a href="https://iumf.org/scholarships/"
+                >visit the Iowa United Methodist Foundation website</a
+              >. There you will find more information as well as application
+              forms.<strong>
+                IUMF applications must be postmarked no later than March
+                1</strong
+              >.
+            </p>
+          </div>
+          <div class="row">
+            <p>
+              For GBHEM scholarships, please
+              <a href="https://www.gbhem.org/scholarships/"
+                >visit the GBHAM website</a
+              >.
             </p>
           </div>
         </div>
-        <div class="col-lg-5 text-center pt-3 pt-lg-0 align-self-center">
-          <img
-            class="w-75"
-            src="./images/GoodSamaritanFoodPantryLogo.jpg"
-            alt="Good Samaritan Food Pantry -- serving our neighbors since 1982"
-          />
+        <div class="col-lg-6 align-self-center text-center">
+          <img class="w-75" src="./images/scholarship.jpg" alt="scholarships" />
         </div>
-      </div>
-      <div class="row pt-4 mx-auto">
-        <div class="col-lg-7">
-          <ul class="list-group flex-wrap text-center">
-            <div class="row">
-              <li class="list-group-item col-lg-12 bg-dark text-white">
-                <h3>Personal Care Items Needed</h3>
-              </li>
-              <li class="list-group-item col-lg-6">Toothbrushes</li>
-              <li class="list-group-item col-lg-6">Bar soap</li>
-              <li class="list-group-item col-lg-6">Toothpaste</li>
-              <li class="list-group-item col-lg-6">Toilet paper</li>
-              <li class="list-group-item col-lg-6">Deodorant</li>
-              <li class="list-group-item col-lg-6">Laundry detergent</li>
-              <li class="list-group-item col-lg-6">Shampoo</li>
-              <li class="list-group-item col-lg-6">Conditioner</li>
-              <li class="list-group-item col-lg-6">Facial tissue</li>
-              <li class="list-group-item col-lg-6">Dish detergent</li>
-            </div>
-          </ul>
-        </div>
-        <div class="col-lg-5 text-center pt-3 pt-lg-0 align-self-center">
-          <img
-            class="w-50"
-            src="./images/food.jpg"
-            alt="food for the food pantry"
-          />
-        </div>
-      </div>
-      <div class="row pt-3 mx-auto">
-        <p>
-          For more information on the Good Samaritan Food Pantry,
-          <a href="http://www.adelfoodpantry.com">visit their website</a>
-        </p>
-      </div>
-      <div class="row pt-3 mx-auto">
-        <p>
-          Contact Suzy Lowman or Rev. Beth if you would like more information
-          about our church's involvement, or if would like to help out.
-        </p>
-      </div>
-      <div class="row pt-3 mx-auto text-center">
-        <h3>
-          <a href="/missionmomentTeams.html">Learn about Mission Teams</a>
-        </h3>
       </div>
     </div>
     <!-- Start Footer -->
