--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 aria-expanded="false"
                 >Our Church</a
               >
-              <ul class="dropdown-menu dropdown-menu-dark bg-dark">
+              <ul class="dropdown-menu dropdown-menu-dark bg-dark shadow">
                 <li>
                   <a class="dropdown-item" href="/directions.html">
                     Church Directions
