--- a/kidsCare.html
+++ b/kidsCare.html
@@ -18,15 +18,14 @@
   </head>
   <body>
     <!-- Banner -->
-    <!-- Banner -->
-    <div class="mt-sm-0 mt-md-3 mt-lg-3 container mx-auto p-0">
+    <div id="banner" class="mt-sm-0 mt-md-3 mt-lg-3 container mx-auto p-0">
       <img class="w-100" src="./images/websitebanner.jpg" />
     </div>
     <!-- End Banner -->
-    <!-- Navbar -->
-    <div class="container mx-auto p-0">
+    <!-- Navbar section -->
+    <div id="navbar-container" class="container mx-auto p-0">
       <nav
-        class="navbar navbar-expand-lg navbar-dark bg-dark shadow"
+        class="navbar navbar-expand-lg navbar-dark bg-dark"
         aria-label="Fifth navbar example"
       >
         <div class="container-fluid">
@@ -62,7 +61,7 @@
                   aria-expanded="false"
                   >Our Church</a
                 >
-                <ul class="dropdown-menu dropdown-menu-dark bg-dark">
+                <ul class="dropdown-menu dropdown-menu-dark bg-dark shadow">
                   <li>
                     <a class="dropdown-item" href="/directions.html">
                       Church Directions
