--- a/missionmomentFoodPantry.html
+++ b/missionmomentFoodPantry.html
@@ -30,16 +30,15 @@
 
   <!-- Body starts here -->
   <body>
-    <!-- Banner section -->
-    <div class="mt-sm-0 mt-md-3 mt-lg-3 container mx-auto p-0">
+    <!-- Banner -->
+    <div id="banner" class="mt-sm-0 mt-md-3 mt-lg-3 container mx-auto p-0">
       <img class="w-100" src="./images/websitebanner.jpg" />
     </div>
     <!-- End Banner -->
-
     <!-- Navbar section -->
-    <div class="container mx-auto p-0">
+    <div id="navbar-container" class="container mx-auto p-0">
       <nav
-        class="navbar navbar-expand-lg navbar-dark bg-dark shadow"
+        class="navbar navbar-expand-lg navbar-dark bg-dark"
         aria-label="Fifth navbar example"
       >
         <div class="container-fluid">
@@ -75,7 +74,7 @@
                   aria-expanded="false"
                   >Our Church</a
                 >
-                <ul class="dropdown-menu dropdown-menu-dark bg-dark">
+                <ul class="dropdown-menu dropdown-menu-dark bg-dark shadow">
                   <li>
                     <a class="dropdown-item" href="/directions.html">
                       Church Directions
