--- a/JAM.html
+++ b/JAM.html
@@ -210,31 +210,31 @@
       </div>
 
       <div class="row pt-3 mx-auto">
-        <div class="col-lg-6 align-self-center">
+        <div class="col-lg-4 align-self-center">
           <img
             class="w-100"
             src="./images/JAMweb1.jpg"
             alt="children play an egg-on-spoon game"
           />
         </div>
-        <div class="col-lg-6 align-self-center pt-3 pt-lg-0">
+        <div class="col-lg-4 align-self-center pt-3 pt-lg-0">
           <img
             class="w-100"
             src="./images/JAMweb2.jpg"
             alt="children sitting on the floor in a circle"
           />
         </div>
-      </div>
-
-      <div class="row pt-3 mx-auto">
-        <div class="col-lg-6 align-self-center">
+        <div class="col-lg-4 align-self-center pt-3 pt-lg-0">
           <img
             class="w-100"
             src="./images/JAMweb3.jpg"
             alt="children playing floor game (camel carrying a load)"
           />
         </div>
-        <div class="col-lg-6 align-self-center pt-3 pt-lg-0">
+      </div>
+
+      <div class="row pt-3 mx-auto justify-content-center">
+        <div class="col-lg-6 align-self-center pt-3 pt-lg-0 text-center">
           <img
             class="w-100"
             src="./images/JAMweb4.jpg"
