--- a/kidsCare.html
+++ b/kidsCare.html
@@ -16,13 +16,19 @@
     <!-- Required Scripts -->
     <script src="navbar.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/autoComplete.min.js"></script>
     <!-- End Scripts -->
     <!-- Required Stylesheets -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css"
+    />
     <link rel="stylesheet" href="./index.css" />
+
     <!-- End Stylesheets -->
   </head>
   <body>
@@ -153,6 +159,23 @@
           </div>
         </div>
       </nav>
+      <div class="container-fluid bg-dark pb-3">
+        <div class="row">
+          <div class="col">
+            <div class="autoComplete_wrapper">
+              <input
+                id="autoComplete"
+                type="search"
+                dir="ltr"
+                spellcheck="false"
+                autocorrect="off"
+                autocomplete="off"
+                autocapitalize="off"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- End Navbar -->
     <div class="container bg mx-auto pb-5">
