--- a/building-request.html
+++ b/building-request.html
@@ -75,7 +75,7 @@
           <div class="collapse navbar-collapse" id="navbarsExample05">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="/index.html">Home</a>
+                <a class="nav-link" href="/">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/kidscare.html"> Kids Care </a>
@@ -171,6 +171,23 @@
           </div>
         </div>
       </nav>
+      <div class="container-fluid bg-dark pb-3">
+        <div class="row">
+          <div class="col">
+            <div class="autoComplete_wrapper">
+              <input
+                id="autoComplete"
+                type="search"
+                dir="ltr"
+                spellcheck="false"
+                autocorrect="off"
+                autocomplete="off"
+                autocapitalize="off"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- End Navbar -->
 
