--- a/missionmomentFoodPantry.html
+++ b/missionmomentFoodPantry.html
@@ -2,24 +2,21 @@
 <html lang="en">
   <head>
     <!-- Required Scripts -->
-    <!-- Importing JavaScript files for navbar functionality -->
     <script src="navbar.js" defer></script>
-    <!-- Importing Bootstrap library for enhanced styling and functionality -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/autoComplete.min.js"></script>
     <!-- End Scripts -->
-
     <!-- Required Stylesheets -->
-    <!-- Importing Bootstrap CSS for styling -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+      href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css"
     />
-    <!-- Custom CSS for additional styling -->
     <link rel="stylesheet" href="./index.css" />
+
     <!-- End Stylesheets -->
 
     <!-- Meta tags -->
