--- a/staff.html
+++ b/staff.html
@@ -17,14 +17,20 @@
     <link rel="icon" href="./images/umc-logo.png" />
     <!-- Required Scripts -->
     <script src="navbar.js" defer></script>
-    <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/autoComplete.min.js"></script>
     <!-- End Scripts -->
     <!-- Required Stylesheets -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css"
+    />
     <link rel="stylesheet" href="./index.css" />
+
     <!-- End Stylesheets -->
   </head>
   <body>
